TIM PALPITES: Fixed de bug en favoritos

--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -601,6 +601,10 @@ body.content-mtm .row-back {
 
 }
 
+.page .search-list-pager li span {
+ box-shadow:none !important;
+}
+
 /*Settings*/
 
 .settings-wrapper {
