TIM PALPITES: Se hace refresh del scroll cuando se pagina

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/team-selection.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/team-selection.html
@@ -63,7 +63,7 @@
 
 
   <ul class="pager search-list-pager">
-    <pager total-items="totalItems" page="currentPage" items-per-page="entryLimit" ></pager>
+    <pager total-items="totalItems" page="currentPage" items-per-page="entryLimit" ng-click="refreshScroll()" ></pager>
     <!--pagination page="currentPage" max-size="noOfPages" total-items="totalItems" items-per-page="entryLimit"></pagination-->
   </ul>
 
