--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/settings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/settings.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
 
-            <div class="panel panel-primary" ng-hide="isWebPlatform()">
+            <div class="panel panel-primary" >
                 <div class="panel-heading">
                     <h3 class="panel-title">
                         <span class="mdi-social-notifications-on"></span>
@@ -78,7 +78,7 @@
                                     <label>
                                         <input type="checkbox" ng-checked="toggles.bets"
                                                ng-model="toggles.bets" ng-click="toggleBets()">
-                                        <div class="toggle"></div>
+                                        <div class="toggle h-toggle"></div>
                                     </label>
                                     <span class="h-name-push" translate>SETTINGS.TOGGLE.BETS</span>
                                 </div>
