--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
@@ -6,7 +6,7 @@
 
                   <div class="container" style="padding: 0 !important;">
 
-                    <div class="row h-header green"  style="margin: 0 !important;">
+                    <div class="row h-header black"  style="margin: 0 !important;">
                       <div class="col-xs-2" ng-click="prevPage($index)">
                         <span class="mdi-navigation-arrow-back" ng-hide="item.competitions[$index-1].name === undefined"></span>
                       </div>
@@ -23,7 +23,7 @@
 
 
                     <div class="row " style="margin: 0 !important;">
-                      <div class="col-xs-12 h-header red" style="text-align:right;" ng-hide="$index===0">
+                      <div class="col-xs-12 h-header gray" style="text-align:right;" ng-hide="$index===0">
 
                         <span class="badge disabled"
                               ng-class="{'disabled': isActive('competition{{$index}}')}"
@@ -50,10 +50,10 @@
                             <div class="col-xs-12" >
                               <table class="table h-table">
                                   <thead>
-                                  <tr>
-                                    <th class="h-header yellow" style="width:20%"  >##</th>
-                                    <th class="h-header yellow left" style="width:60%" translate>LEADERBOARD.PLAYER</th>
-                                    <th class="h-header yellow" style="width:20%" translate>LEADERBOARD.POINTS</th>
+                                  <tr class="h-header light-gray">
+                                    <th style="width:20%"  >##</th>
+                                    <th class="left" style="width:60%" translate>LEADERBOARD.PLAYER</th>
+                                    <th style="width:20%" translate>LEADERBOARD.POINTS</th>
                                   </tr>
                                 </thead>
                                 <tbody >
