--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
@@ -4,7 +4,7 @@
             <li ng-style="getWidth()" ng-repeat="league in leagues" >
                 <div class="container">
 
-                  <div class="row h-header green">
+                  <div class="row h-header black">
                     <div class="col-xs-2" ng-click="prevPage($index)">
                       <span class="mdi-navigation-arrow-back" ng-hide="leagues[$index-1].name === undefined"></span>
                     </div>
@@ -25,10 +25,10 @@
                                     <div class="col-xs-12" >
                                         <table  ng-show="league.scorers" class="table h-table">
                                             <thead>
-                                            <tr>
-                                                <th class="h-header yellow" translate style="text-align: left;">SCORERS.PLAYER_NAME_LABEL</th>
-                                                <th class="h-header yellow" translate style="text-align: left;">SCORERS.TEAM_LABEL</th>
-                                                <th class="h-header yellow" translate>SCORERS.GOALS_LABEL</th>
+                                            <tr class="h-header gray">
+                                                <th translate style="text-align: left;">SCORERS.PLAYER_NAME_LABEL</th>
+                                                <th translate style="text-align: left;">SCORERS.TEAM_LABEL</th>
+                                                <th translate>SCORERS.GOALS_LABEL</th>
                                             </tr>
                                             </thead>
                                             <tbody>
@@ -56,8 +56,8 @@
 
                                   </div>
 
-                                  <div class="row h-source" ng-show="showSource" style="border-top: solid 1pt rgb(254,209,0);">
-                                    <div class="col-xs-12" style="padding: 15px  !important; text-align:left; ">
+                                  <div class="row h-source" ng-show="showSource">
+                                    <div class="col-xs-12" style="padding: 15px !important; text-align:left;">
                                       {{'NEWS.SOURCE' | translate}} <span>: Perform Group</span>
                                     </div>
                                   </div>
