--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -5,7 +5,7 @@ row:not(input):not(textarea) {
 
 * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
 html { -ms-touch-action: none; font-family: Helvetica; }
-body,ul,li { padding: 0 !important; margin: 0 !important; border: 0 !important; width: 100%; height: 100%; color:#002878; background:#ffffff !important; font-size: 62.5% important;}
+body,ul,li { padding: 0 !important; margin: 0 !important; border: 0 !important; width: 100%; height: 100%; color:#000000; background:#ffffff !important; font-size: 62.5% important;}
 
 
 .footer-section{color: #FFFFFF !important; text-decoration: none  !important; }
@@ -48,30 +48,20 @@ header, footer {
     width: 100%;
     height: 50px;
     line-height: 50px;
-    background: rgb(0,40,120);
+    background: #e05206;
     padding: 0 !important;
     margin:0 !important;
     border: 0;
 }
 
-header {
-    background: rgb(44,156,211);
-}
 
 footer {
     line-height: 25px;
-    color:#002878;
     bottom: 0;
-    background: rgb(0,40,120);
     z-index: 10;
 }
 
-footer .option {
-    padding: 5px !important;
-    text-align: center;
-}
-
-
+footer .option {padding: 5px !important; text-align: center;}
 
 footer *[class *= 'glyphicon'],
 footer *[class *= 'icon-material'],
@@ -82,19 +72,8 @@ footer *[class *= 'icon-'] {
     display:block;
 }
 
-
-footer .glyphicon-class {
-    display: block;
-    word-wrap: break-word;
-}
-
-footer .option.active {
-    background-color: rgb(254,209,0);
-}
-
-footer .option.active span {
-  color:#002878 !important;
-}
+footer .glyphicon-class { display: block; word-wrap: break-word; }
+footer .option.active { background-color: #000000; }
 
 header .section {
     text-shadow: -1px 1px 1px rgba(0,0,0,0.5);
@@ -119,7 +98,7 @@ footer .section .active {
 body.content-match #wrapper .scroller .container .row .competition {
     padding-top: 10px !important;
     padding-bottom: 10px !important;
-    border-bottom: solid 1pt #2B2B2B !important;
+    border-bottom: solid 1pt #a09d96 !important;
 }
 
 table,
@@ -466,13 +445,13 @@ body.content-mtm .row-back {
 /*menu*/
 
 .content-menu,
-.content-sub-menu {background:#ffffff; height: 50px; line-height:50px; color:#134985; margin-left: 32px;}
+.content-sub-menu {background:#ffffff; height: 50px; line-height:50px; color:#000000; margin-left: 32px;}
 .content-menu div.col-xs-8,
-.content-sub-menu div.col-xs-8{border-bottom: solid 1pt #ffca00; padding-left:0 !important;}
+.content-sub-menu div.col-xs-8{border-bottom: solid 1pt #000000; padding-left:0 !important;}
 .content-menu span:last-child {text-transform:uppercase;}
 
 .content-sub-menu div.col-xs-8 {
-  border-bottom: solid 1pt #134985;
+  border-bottom: solid 1pt #a09d96;
   padding-left:0 !important;
 }
 
@@ -493,7 +472,7 @@ body.content-mtm .row-back {
 }
 
 .btn-delete-item {
-    background-color: #f44336 !important;
+    background-color: #766a62 !important;
     border-radius: 100%;
     padding: 6px;
     width: 24px;
@@ -551,7 +530,7 @@ body.content-mtm .row-back {
 }
 
 .btn-orange {
-    background-color: rgb(44,156,211) !important;
+    background-color: #e05206 !important;
     color: #FFF !important;
 }
 
@@ -674,15 +653,6 @@ body.content-mtm .row-back {
     text-align: center;
 }
 
-/*Lists*/
-/*.row-list-item{
-    padding-top: 10px !important;
-    padding-bottom: 10px !important;
-    border-bottom: solid 1pt #2B2B2B !important;
-}*/
-
-/*Leaderboars*/
-
 .row-header {
     position: absolute;
     z-index: 4;
@@ -768,7 +738,7 @@ body.content-mtm .row-back {
     display: none !important;
 }
 .client {
-  color:#ff5722 !important;
+  color:#e05206 !important;
   font-weight: bold;
 }
 
@@ -795,28 +765,26 @@ h6.team-name {
       padding-bottom: 0px !important;
     }
 
+    .h-header.black {
+      background: #000000;
+      color: #ffffff;
+    }
+
+    .h-header.gray {
+      background: #766a62;
+      color: #ffffff;
+    }
+
+   .h-header.light-gray {
+     background: #a09d96;
+     color: #ffffff;
+   }
+
+
+
+
     .h-header.green {
       background: rgb(122,184,0);
-      color: #ffffff;
-    }
-
-    .h-header.yellow {
-      background: rgb(254,209,0);
-      color: rgb(0,40,120);
-    }
-
-    .h-header.blue {
-      background: rgb(0,40,120);
-      color: #ffffff;
-    }
-
-    .h-header.light-blue {
-      background: rgb(44,156,211);
-      color: #ffffff;
-    }
-
-    .h-header.red {
-      background: rgb(227,114,34);
       color: #ffffff;
     }
 
@@ -834,8 +802,7 @@ h6.team-name {
       text-align: left;
       min-height:50px;
       line-height: 50px;
-      border-bottom: solid 1pt rgb(254,209,0);
-      /*font-weight:bold;*/
+      border-bottom: solid 1pt #000000;
     }
 
     .h-list.news *[class *= 'col-'] {
@@ -855,7 +822,7 @@ h6.team-name {
     .content-news .h-moment {
       font-size:1.2em;
       /*font-weight:bold;*/
-      color: rgb(44,156,211);
+      color: #e05206;
     }
 
     .content-news .h-body {
@@ -914,13 +881,13 @@ h6.team-name {
     }
 
     .content-prediction .wrapper { top: 70px; }
-    tr.h-match { border-bottom: 1.5px rgb(44,156,211) solid !important; }
+    tr.h-match { border-bottom: 1.5px #000000 solid !important; }
     tr.h-match:last-child { border: 0 !important; }
     tr.h-match td { height: auto;} /*vertical-align:middle;*/
     tr.h-match td .h-name-team {display:block; height: auto; }
     tr.h-match td .h-goal-team {height: auto;}
 
-    tr.h-points { border-bottom: 1pt rgb(44,156,211) solid !important; }
+    tr.h-points { border-bottom: 1pt #000000 solid !important; }
     tr.h-points:last-child { border: 0 !important; color: rgb(227,114,34);}
 
     .content-mtm #wrapper2 {
@@ -977,12 +944,12 @@ h6.team-name {
     .panel-primary  > .panel-heading,
     .panel-success  > .panel-heading,
     .panel-info > .panel-heading {
-      background  : rgb(44,156,211);
+      background  : #e05206;
     }
 
     .btn-primary:not(.btn-link):not(.btn-flat),
     .btn-success:not(.btn-link):not(.btn-flat) {
-      background  : rgb(44,156,211);
+      background  : #e05206;
     }
 
     .btn-facebook {
@@ -1043,31 +1010,24 @@ h6.team-name {
       height: auto;
     }
 
-  .status._1 { color: rgb(227,114,34); }     /*Played*/
-  .status._2 { color: rgb(122,184,0);  }     /*Playing*/
-  .status._3 { color: rgb(0,40,120); }       /*Fixture*/
-  .status._4 { color: rgb(227,114,34);  }    /*Cancelled*/
-  .status._5 { color: rgb(254,209,0);  }     /*Postponed*/
-  .status._6 { color: rgb(254,209,0);  }     /*Suspended*/
+  .status._1 { color: rgb(224,82,6); } /*Played*/
+  .status._2 { color: rgb(160,157,150); } /*Playing*/
+  .status._3 { color: rgb(118,106,98); } /*Fixture*/
+  .status._4 { color: rgb(224,82,6); } /*Cancelled*/
+  .status._5 { color: rgb(0,0,0); } /*Postponed*/
+  .status._6 { color: rgb(0,0,0); } /*Suspended*/
 
+  .status.period { background: rgb(118,106,98); color: #ffffff; }
+  .status.period._9 { background: rgb(160,157,150); color: #ffffff; }
+  .status.period._8 { background: rgb(0,0,0); color: rgb(118,106,98); }
 
-  .status.period { background: rgb(0,40,120);
-                         color: #ffffff;}
+  .h-event{
+    border-bottom: solid 1pt  #e05206 !important;
+  }
 
-  .status.period._9 {background: rgb(122,184,0);
-                          color: #ffffff; }
-
-  .status.period._8 {   background: rgb(254,209,0);
-                           color: rgb(0,40,120); }
-
-
-    .h-event{
-      border-bottom: solid 1pt  rgb(44,156,211) !important;
-    }
-
-    .h-event:last-child {
-          border-bottom: 0 !important;
-    }
+  .h-event:last-child {
+        border-bottom: 0 !important;
+  }
 
 
     header .h-title {
@@ -1097,14 +1057,14 @@ h6.team-name {
     .content-news #wrapper2 *[class *= 'mdi-']{
       font-size:1.2em;
       font-weight:bold;
-      color: rgb(44,156,211);
+      color: #e05206;
     }
 
     .content-menu *[class *= 'mdi-'],
     .content-menu *[class *= 'icon-'] {
       font-size:2em;
       vertical-align: middle;
-      color:  rgb(0,40,120);
+      color:  #e05206;
     }
 
     .content-menu *[class *= 'icon-'] {
@@ -1244,7 +1204,7 @@ h6.team-name {
     }
 
     .badge {
-      background: rgb(44,156,211);
+      background: #e05206;
       padding: 5px 15px;
       font-size:
       1em;
@@ -1252,7 +1212,7 @@ h6.team-name {
     }
 
     .badge.disabled {
-       background: rgb(44,156,211);
+       background: #e05206;
        color: #ffffff;
         opacity: 0.7;
         filter: alpha(opacity=70);
@@ -1304,7 +1264,7 @@ h6.team-name {
 
 
   .list-group-item-heading {
-    color:  rgb(0,40,120) !important;
+    color:  #000000 !important;
   }
 
   .btn {
@@ -1335,7 +1295,7 @@ h6.team-name {
    }
 
   .h-points  {
-    background: rgb(122,184,0) !important;
+    background: #766a62 !important;
     height: 225px;
   }
   .content-dashboard  tr.h-match {border-bottom: 1.5px #ffffff solid !important;}
@@ -1345,6 +1305,37 @@ h6.team-name {
     top: -30px;
   }
 
+
+.field-circle {
+  position:absolute;
+  top: 100px;
+  left:0;
+  right: 0;
+  display:block;
+  width:100px;
+  height: 100px;
+  line-height: 25px;
+  background-color: #766a62!important;
+  border-radius: 50%;
+  text-align:center;
+  color:   #000000;
+  font-size:1.8em;
+  margin: 0 auto  !important;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #ffffff;
+}
+
+.h-source { border-top: solid 1pt #a09d96; }
+.h-toggle { background-color: #766a62 !important; }
+
+.togglebutton label input[type=checkbox]:first-child:checked + .toggle {
+  background-color: #766a62 !important;
+}
+
+.togglebutton label input[type=checkbox]:first-child:checked + .toggle:after {
+    background-color: #766a62 !important;
+}
 
   /*</v2>*/
 
