--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
@@ -81,9 +81,9 @@
 
 </div>
 
-<div style="position: absolute; z-index: 120; top:0; right:20px; height:50px; line-height:50px;" ng-click="share(contentNews)" ng-show="isPageContentLeft">
+<!--div style="position: absolute; z-index: 120; top:0; right:20px; height:50px; line-height:50px;" ng-click="share(contentNews)" ng-show="isPageContentLeft">
   <i class="mdi-social-share" style="vertical-align: middle; color:#ffffff; "></i>
-</div>
+</div> -->
 
 <div class="no-content-panel h-horizontal" ng-hide="hasNews">
   <div class="h-vertical">
