FOOTBALL_BRAZIL: fix para el login al admin

--- a/FutbolBrasil/web/app/views/main.scala.html
+++ b/FutbolBrasil/web/app/views/main.scala.html
@@ -92,7 +92,7 @@
                                     </ul>
                                 }
                             }{
-                                <a href="@routes.Application.login()" class="dropdown-toggle @("disabled".when(nav == "login"))" data-toggle="dropdown">@Messages("playauthenticate.navigation.login")</a>
+                                <a href="@routes.Application.login()">@Messages("playauthenticate.navigation.login")</a>
                             }
 
                         </li>
