--- a/NoticiasTVN/NoticiasTVN/platforms/android/res/xml/config.xml
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/res/xml/config.xml
@@ -121,4 +121,7 @@
         <param name="android-package" value="com.rjfun.cordova.admob.AdMobPlugin" />
         <param name="onload" value="true" />
     </feature>
+    <feature name="Market">
+        <param name="android-package" value="com.xmartlabs.cordova.market.Market" />
+    </feature>
 </widget>
